--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@ body{
 header{
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 15vh;
@@ -55,6 +56,11 @@ textarea{
     max-height: 50vh;
 
     border-radius: 5px;
+}
+
+span{
+    display: flex;
+    gap: 5px;
 }
 
 button{
@@ -109,6 +115,8 @@ button:active{
 
 #posts>div:hover{
     transform: scale(1.02);
+    transition: 0.5s;
+
 }
 
 
